--- a/style/_global.scss
+++ b/style/_global.scss
@@ -1,6 +1,8 @@
 $fondo: #000000;
 $rojo: #dc3545;
 $naranja: #ffc107;
+$rojo2: #5c0211;
+$naranja2: #896805;
 $link: #0d6efd;
 $rojo-fuerte: #e60127;
 
