--- a/style/_about.scss
+++ b/style/_about.scss
@@ -12,25 +12,27 @@
         "hr1"
         "aboutBanner"
         "hr2"
-        "aboutTexto1"
+        "aboutTexto"
         "hr3"
-        "aboutTexto2"
-        "hr4"
         "aboutFoto2"
-        "hr5"
+        "hr4"
         "footer";
 }
 .header { grid-area: header; }
-.hr1 { grid-area: hr1; }
 .aboutTitle { grid-area: aboutTitle;
     font-family: Trebuchet MS, sans-serif;
-    font-size: clamp(2.5rem, 2vw, 6rem);
+    font-size: clamp(2.5rem, 2vw, 5rem);
     color: $naranja;
     text-align: center;
     height: auto;
+    font-weight: bold;
     margin: 10px;
+    &:hover {
+        transition: color 2s ease;
+        color: $naranja2;
+    }
 }
-.hr2 { grid-area: hr2; }
+.hr1 { grid-area: hr1; }
 .aboutBanner { grid-area: aboutBanner;
     text-align: center;
     margin: auto;
@@ -42,21 +44,33 @@
         }
     }
 }
-.hr3 { grid-area: hr3; }
-.aboutTexto1 { grid-area: aboutTexto1;
+.hr2 { grid-area: hr2; }
+.aboutTexto { grid-area: aboutTexto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    p {
+        @extend p ;
+    }
+    hr {
+        margin: 15px auto;
+        width: 80%;
+        height: 2px;
+        border: none;
+    }
+    h2 {
+        @extend p ;
+        span {
+            font-size: calc(1.10em + 1vmin);
+        }
+    }
 }
-.hr4 { grid-area: hr4; }
-.aboutTexto2 { grid-area: aboutTexto2;
-    @extend .aboutTexto1
-}
-.hr5 { grid-area: hr5; }
+.hr3 { grid-area: hr3; }
 .aboutFoto2 { grid-area: aboutFoto2;
     @extend .aboutBanner
 }
+.hr4 { grid-area: hr4; }
 .footer { grid-area: footer; }
 
 
@@ -68,13 +82,19 @@
         max-width: 90vw;
         align-self: center;
     }
-    .aboutTexto1, .aboutTexto2 {
+    .aboutTexto {
         align-items: center;
         width: 100%;
         max-height: none;
         flex-grow: 1;
+        h2 {
+            span {
+                font-size: calc(1em + 1vmin);
+            }
+        }
     }
     .aboutTitle {
+        font-size: calc(2em + 1vmin);
         margin: 0px auto 30px;
     }
 }
