--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,6 @@
-/*Partials y Variables*/
+/*Partials*/
+/*Variables*/
+/*Global Styling*/
 * {
   margin: 0;
   padding: 0;
@@ -82,9 +84,16 @@ nav {
 nav .navbar-toggler {
   background-color: #000000;
   border-color: #ffc107;
+  margin: 10px auto;
 }
 nav #navbarContent .navbar-nav {
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 3rem;
+  padding: 0.5rem;
+  margin: 0.5rem;
 }
 nav #navbarContent .navbar-nav .nav-link {
   font-size: clamp(1.5rem, 2vw, 5rem);
@@ -111,19 +120,20 @@ nav .navbar-toggler {
   text-align: center;
   margin: 10px auto 20px auto;
 }
-.footer a {
+.footer figure a {
   color: #0d6efd;
   font-size: clamp(1rem, 2vw, 4rem);
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
 }
-.footer a img {
+.footer figure a .footerLogo {
   width: 80%;
   height: auto;
+  margin: 0px auto;
   transition: transform 2s ease;
 }
-.footer a img:hover {
+.footer figure a .footerLogo:hover {
   transform: scale(1.2);
 }
 
@@ -180,6 +190,8 @@ nav .navbar-toggler {
     flex-flow: column;
     align-items: center;
     justify-items: center;
+    line-height: 0;
+    margin: 10px auto;
   }
   body #programCarousel {
     max-width: 90vw;
@@ -243,11 +255,10 @@ nav .navbar-toggler {
   .header hr {
     margin: 15px auto;
   }
-  .footer a img {
-    width: 80%;
+  .footer figure a .footerLogo {
     transition: none;
   }
-  .footer a img:hover {
+  .footer figure a .footerLogo:hover {
     transform: none;
   }
 }
